2018-08-07  Vitezslav Crhonek <vcrhonek@redhat.com>  (tiny change)

	* info/echo-area.c (info_read_completing_internal): Avoid memory leak.

2018-07-13  Niko Tyni <ntyni@debian.org>  (tiny change)

	Perl 5.28 introduced thread-safe locales, where 'setlocale'
	only affects the locale of the current thread. External code
	like 'mbrtowc' isn't aware of this thread specific locale,
	so we need to explicitly modify the global one instead.
	
	Without this we could enter a busy loop in xspara__add_next
	(Texinfo::Convert::XSParagraph) for UTF-8 documents when mbrtowc
	returned -1.

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_init)
	[Perl version >= 5.28]: Call 'switch_to_global_locale' and 
	'sync_locale'.

2018-07-13  Niko Tyni <ntyni@debian.org>  (tiny change)

	* tp/Texinfo/Parser.pm (_parse_special_misc_command) <@clickstyle>:
	Escape braces in regex to be compatible with recent Perl 
	versions.

2018-06-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Transformations.pm (_reference_to_arg):
	Refer to 'args' array instead of 'brace_command_contents'.
	(Makes a couple of tests failing since 2017-10-29 pass.)

2018-06-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert):
	When checking if a node name in a cross-reference includes a
	`.', do not include in the check any manual name that may have 
	already been stored inside the paragraph formatter.  Rical Jasan 
	reported that an error message mentioning the "node name" would 
	be given for output like "(gcc.info)Debugging Options" which is 
	confusing as the `.' is not in the node name "Debugging 
	Options".  (bug-texinfo 2018-02-09)

2018-06-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_node_of_tag_ext): Always call 
	node_set_body_start regardless of the value of 
	preprocess_nodes_p.  Benno Schulenberg reported that searching 
	commands could find matches in the node information line if the 
	use set "hide-note-references=On".
