@@ -71,6 +71,7 @@ void add_char_to_keyseq (int character);
 FILE_BUFFER *file_buffer_of_window (WINDOW *window);
 int info_select_reference (WINDOW *window, REFERENCE *entry);
 int info_any_buffered_input_p (void);
+void pause_or_input (void);
 
 void dump_nodes_to_file (REFERENCE **references,
 				char *output_filename, int flags);
