@@ -1,3 +1,9 @@
+2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/echo-area.c, info/session.c (pause_or_input):
+	Move to session.c.  Do not pause if there is already buffered 
+	input waiting.
+
 2018-08-07  Vitezslav Crhonek <vcrhonek@redhat.com>  (tiny change)
 
 	* info/echo-area.c (info_read_completing_internal): Avoid memory leak.
